--- a/im-server/pom.xml
+++ b/im-server/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>curator-client</artifactId>
             <version>5.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
